# xfoil-gpu

./: AGENTS.md  README.md  SPEC.md  pyproject.toml  warp_xfoil_cuda_rewrite_feasibility.md  warp_xfoil_pufferlib_deep_research.md  warp_xfoil_warm_start_research.md
checkpoints/: 2026-06-06-render-y-margin-checkpoint.md
configs/: cpu_baseline_fallback.toml  cpu_baseline_native.toml  cpu_reference.toml
logs/: cpu_baseline_20260606_165439.json  cpu_baseline_20260606_165728.json  cpu_smoke.json  field-orient-test-gallery.html  orient_field-gallery.html
logs/field-align/: final_multi_v3-gallery.html  verify_fill-gallery.html  verify_fill_afterfix-gallery.html  verify_fill_bounds-gallery.html  verify_fill_bounds_v2-gallery.html
logs/field-fix-sweep/: final-gallery.html
logs/field-orient/: index.html
logs/field-orient2/: field-gallery.html
logs/field-orientation/: final-baseline-gallery.html  final-filled-panel-sweep-gallery.html
logs/field-orientation-sweep/: sync_orients-gallery.html
logs/smoke/: report.json
scripts/: bench_cpu.py  bench_native_cpu.py  benchmark_cpu.sh  build_native_cpu_cpp.py  cpu_smoke.py  engine_smoke.py  env_probe.py  fake_xfoil.sh  quickstart_cpu.sh  render_raylib.py  run_cpu.sh  run_cpu_fallback.sh  smoke-rel.cmd  smoke-rel.polar
src/xfoil_port/: __init__.py  cli.py  engine.py  errors.py  geometry.py  step_env.py  types.py
tests/: test_cli.py  test_cpu_backend.py  test_engine.py  test_env_probe.py  test_geometry.py  test_native_cpu_kernels.py  test_parser.py  test_run_cpu.py  test_scripts.py  test_step_env.py
(+6 files in other folders)
