[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "xfoil-port"
version = "0.1.0"
description = "CPU-first XFOIL port with a GPU-ready interface."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
xfoil-port = "xfoil_port.cli:main"
